2009-05-20  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* operation/events/events.php: Fixed small bug where on deletion of
	multiple events it skips anything above $config['block_size']

2009-05-12  Manuel Arostegui <marostegui@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed bug when creating
	a report, only "All" group was available.

2009-04-30  Sancho Lerena  <slerena@artica.es>

	* functions.php: Fixed ugly render of times in certain situations.
	
	* functions_db.php: Fixed calculation of network server modules.
	
	* estado_grupo.php: Fixed notice.

2009-04-30  Jorge Gonzalez  <jorgegonz@artica.es>

	* pandoradb_data.sql: added two links to tlink, and fixed http://
	* for anotherone.

2009-04-17  Esteban Sanchez  <estebans@artica.es>

	* godmode/servers/manage_recontask_form.php: Removed a notice
	when there's no recon server.

	* include/functions_visual_map.php: Removed a warning when
	there's no parent.

2009-04-14  Esteban Sanchez  <estebans@artica.es>

	* index.php: Removed debug traces.

2009-04-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* images/console/icons/dotmin_ok.png,
	  images/console/icons/appliance_ok.png, 
	  images/console/icons/ap_ok.png,
	  images/console/icons/dotmin.png, 
	  images/console/icons/appliance.png,
	  images/console/icons/dotmin_bad.png, 
	  images/console/icons/ap.png,
	  images/console/icons/switch.png,
	  images/console/icons/appliance_bad.png,
	  images/console/icons/ap_bad.png,
	  images/console/icons/switch_bad.png,
	  images/console/icons/switch_ok.png: Added icons for the visual
	  console.

2009-04-08  Esteban Sanchez  <estebans@artica.es>

	* index.php: Updated refresh meta label that was causing some errors
	when the port was not 80.

2009-04-07  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation.

	* include/languages/index.pot: Updated po template.

2009-04-01  Jorge Gonzalez  <jorgegonz@artica.es>
